[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/collisionTypes/damageEmitter.gd" type="Script" id=1]


[node name="damangeEmitSense" type="Area"]
script = ExtResource( 1 )

[node name="burningTimer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_damangeEmitSense_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_damangeEmitSense_area_exited"]
[connection signal="timeout" from="burningTimer" to="." method="_on_burningTimer_timeout"]
